tests/extra_mod/macros/long_simple_three_mpst_short_fail.stderr
error[E0308]: mismatched types
  --> $DIR/long_simple_three_mpst_short_fail.rs:86:26
   |
86 |             let (_, s) = recv_mpst!(s, RoleC, RoleB, MeshedChannelsThree, 3, 2)()?;
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected struct `RoleB`, found struct `RoleA`
   |
   = note: expected reference `&RoleB<RoleEnd>`
              found reference `&RoleA<RoleEnd>`
note: return type inferred to be `&RoleB<RoleEnd>` here
  --> $DIR/long_simple_three_mpst_short_fail.rs:86:26
   |
86 |             let (_, s) = recv_mpst!(s, RoleC, RoleB, MeshedChannelsThree, 3, 2)()?;
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `mpst_seq_macros_multiple::recv_mpst` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/long_simple_three_mpst_short_fail.rs:87:21
   |
87 |             let s = send_mpst!(s, (), RoleC, RoleB, MeshedChannelsThree, 3, 2);
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected struct `RoleB`, found struct `RoleA`
   |
   = note: expected reference `&RoleB<RoleEnd>`
              found reference `&RoleA<RoleEnd>`
note: return type inferred to be `&RoleB<RoleEnd>` here
  --> $DIR/long_simple_three_mpst_short_fail.rs:81:5
   |
81 | /     offer_mpst!(s, recv_mpst_a_from_c, {
82 | |         Branching0fromCtoA::Done(s) => {
83 | |             close_mpst_multi(s)
84 | |         },
...  |
91 | |         },
92 | |     })
   | |______^
   = note: this error originates in the macro `mpst_seq_macros_multiple::send_mpst` (in Nightly builds, run with -Z macro-backtrace for more info)
